==> ETHZ-TEC/LWB-Baseline/arch/cpu/msp430/cc430/rtimer-ext.c <==
#include "contiki.h"
#include "sys/energest.h"
#include "sys/etimer.h"
#include "dc-stat.h"
#include "sys/log.h"
#define LOG_MODULE    "rtimer-ext"
#define LOG_LEVEL LOG_LEVEL_MAIN

void
rtimer_ext_init(void)
{
  /* initialize timer A0: */
  /* SMCLK (3.25 MHz), continuous mode, clear TA0R, overflow interrupt */
  ta0_sw_ext = 0;
  TA0CTL = 0;
#if RTIMER_EXT_CONF_HF_ENABLE
  /* make sure the input divider expansion is set to 0 before setting the
   * TACLR bit */
  TA0EX0 = 0;
  TA0CTL = TASSEL_2 | MC_2 | ID__1 | TACLR | TAIE; /* SMCLK, input divider 1 */
#endif /* RTIMER_EXT_CONF_HF_ENABLE */

  /* initialize timer A1: */
  /* ACLK, continuous mode, clear TA1R */
  ta1_sw_ext = 0;
  TA1EX0 = 0;
#if RTIMER_EXT_CONF_LF_UPDATE_INT
  TA1CTL = TASSEL_1 | MC_2 | ID__1 | TACLR | TAIE;
#else  /* RTIMER_EXT_CONF_LF_UPDATE_INT */
  TA1CTL = TASSEL_1 | MC_2 | ID__1 | TACLR;
#endif /* RTIMER_EXT_CONF_LF_UPDATE_INT */
}

void
rtimer_ext_schedule(rtimer_ext_id_t timer,
                    rtimer_ext_clock_t start,
                    uint32_t period,
                    rtimer_ext_callback_t func)
{
  if((timer < NUM_OF_RTIMER_EXTS)
      && (rt[timer].state != RTIMER_EXT_SCHEDULED)) {
    rt[timer].func = func;
    rt[timer].period = period;
    rt[timer].time = start + period;
    rt[timer].state = RTIMER_EXT_SCHEDULED;
    if(timer >= RTIMER_EXT_LF_0) {
      *(&TA1CCR0 + (timer - RTIMER_EXT_LF_0)) = (uint16_t) (start + period);
      *(&TA1CCTL0 + (timer - RTIMER_EXT_LF_0)) = CCIE | OUTMOD_4;
      /* if the scheduled time is in the past, then trigger an interrupt now */
      if(rt[timer].time <= rtimer_ext_now_lf()) {
        *(&TA1CCTL0 + (timer - RTIMER_EXT_LF_0)) |= CCIFG;
      }
    } else {
      *(&TA0CCR0 + timer) = (uint16_t) (start + period);
      *(&TA0CCTL0 + timer) = CCIE | OUTMOD_4; /* enable interrupt */
      /* if the scheduled time is in the past, then trigger an interrupt now */
      if(rt[timer].time <= rtimer_ext_now_hf()) {
        *(&TA0CCTL0 + timer) |= CCIFG;
      }
    }
  }
}

void
rtimer_ext_stop(rtimer_ext_id_t timer)
{
  if(timer < NUM_OF_RTIMER_EXTS) {
    if(timer >= RTIMER_EXT_LF_0) {
      *(&TA1CCTL0 + timer - RTIMER_EXT_LF_0) = 0;
      rt[timer].state = RTIMER_EXT_INACTIVE;
    } else {
      *(&TA0CCTL0 + timer) = 0;
      rt[timer].state = RTIMER_EXT_INACTIVE;
    }
  }
}

void
rtimer_ext_reset(void)
{
  TA0R = 0;
  TA1R = 0;
  TA0CTL &= ~TAIFG;
  TA1CTL &= ~TAIFG;
  ta0_sw_ext = 0;
  ta1_sw_ext = 0;
  DCSTAT_RESET;
}

rtimer_ext_clock_t
rtimer_ext_now_hf(void)
{
  /* disable all interrupts */
  uint16_t interrupt_enabled = __get_interrupt_state() & GIE;
  /* or use: __get_SR_register()  or  (READ_SR & GIE) */
  __dint();
  __nop();

  /* take a snapshot of both the HW timer and the SW extension */
  rtimer_ext_clock_t sw = ta0_sw_ext;
  uint16_t hw = TA0R;
  if(TA0CTL & TAIFG) {
    /* in the meantime there has been an overflow of the HW timer: */
    /* manually increment the SW extension */
    sw++;
    ta0_sw_ext++;
    TA0CTL &= ~TAIFG;
    /* and take a new snapshot of the HW timer */
    hw = TA0R;
  }
  /* shift the SW extension to the left and append the HW timer */
  rtimer_ext_clock_t time = (sw << 16) | hw;

  /* only enable interrupts if the GIE bit was set before! otherwise interrupt
   * nesting will be enabled if rtimer_ext_now_hf() is called from an ISR! */
  if(interrupt_enabled) {
    __eint();
    __nop();
  }

  return time;
}

rtimer_ext_clock_t
rtimer_ext_now_lf(void)
{
  /* disable all interrupts */
  uint16_t interrupt_enabled = __get_interrupt_state() & GIE; //READ_SR & GIE;
  __dint();
  __nop();

  /* take a snapshot of both the HW timer and the SW extension */
  rtimer_ext_clock_t sw = ta1_sw_ext;
  uint16_t hw = rtimer_ext_now_lf_hw();
  if(TA1CTL & TAIFG) {
    /* in the meantime there has been an overflow of the HW timer: */
    /* manually increment the SW extension */
    sw++;
    ta1_sw_ext++;
    TA1CTL &= ~TAIFG;
    /* and take a new snapshot of the HW timer */
    hw = rtimer_ext_now_lf_hw();
  }
  /* shift the SW extension to the left and append the HW timer */
  rtimer_ext_clock_t time = (sw << 16) | hw;

  /* only enable interrupts if the GIE bit was set before! otherwise interrupt
   * nesting will be enabled if rtimer_ext_now_hf() is called from an ISR! */
  if(interrupt_enabled) {
    __eint();
    __nop();
  }

  return time;
}

uint16_t
rtimer_ext_swext_addr(rtimer_ext_id_t timer)
{
  if(timer < RTIMER_EXT_CONF_NUM_HF) {
    return (uint16_t) &ta0_sw_ext;
  }
  return (uint16_t) &ta1_sw_ext;
}
