==> Airelin/BlueFlood-v-2/contiki-ng/arch/cpu/nrf52840/rtimer-ext.c <==
#include "contiki.h"
#include "assert.h"
#include "rtimer-ext.h"
#include "nrf_timer.h"
#include "nrf_rtc.h"
#include "leds.h"
#include "sys/log.h"
#define LOG_MODULE "rtimer-ext"
#define LOG_LEVEL LOG_LEVEL_INFO
#define HF_TIMER NRF_TIMER1
#define LF_TIMER NRF_RTC1

void rtimer_ext_init(void)
{
  nrf_timer_task_trigger(HF_TIMER, NRF_TIMER_TASK_STOP);
  nrf_timer_bit_width_set(HF_TIMER, NRF_TIMER_BIT_WIDTH_32);
  nrf_timer_frequency_set(HF_TIMER, NRF_TIMER_FREQ_16MHz);
  nrf_timer_mode_set(HF_TIMER, NRF_TIMER_MODE_TIMER);
  nrf_timer_cc_write(HF_TIMER, NRF_TIMER_CC_CHANNEL0, UINT32_MAX);
  nrf_timer_int_enable(HF_TIMER, NRF_TIMER_INT_COMPARE0_MASK);
  nrf_timer_task_trigger(HF_TIMER, NRF_TIMER_TASK_CLEAR);

  nrf_rtc_task_trigger(LF_TIMER, NRF_RTC_TASK_STOP);
  nrf_rtc_prescaler_set(LF_TIMER, 0);
  nrf_rtc_int_enable(LF_TIMER, NRF_RTC_INT_OVERFLOW_MASK);
  nrf_rtc_task_trigger(LF_TIMER, NRF_RTC_TASK_CLEAR);
  nrf_rtc_event_enable(LF_TIMER, NRF_RTC_INT_OVERFLOW_MASK |
  NRF_RTC_INT_COMPARE0_MASK);

  NVIC_ClearPendingIRQ(TIMER1_IRQn);
  NVIC_EnableIRQ(TIMER1_IRQn);
  NVIC_ClearPendingIRQ(RTC1_IRQn);
  NVIC_EnableIRQ(RTC1_IRQn);

  //TEST
  //nrf_rtc_prescaler_set(LF_TIMER, 32000);
  // nrf_rtc_int_enable(LF_TIMER, NRF_RTC_INT_TICK_MASK);
  // nrf_rtc_event_enable(LF_TIMER, NRF_RTC_INT_TICK_MASK);
  // LOG_DBG("EVTEN: %ld\n", LF_TIMER->EVTEN);

  hf_sw_ext = 0;
  lf_sw_ext = 0;


  nrf_rtc_task_trigger(LF_TIMER, NRF_RTC_TASK_START);
  nrf_timer_task_trigger(HF_TIMER, NRF_TIMER_TASK_START);
  LOG_INFO("Initialized timers\n");
}

void rtimer_ext_schedule(rtimer_ext_id_t timer,
                         rtimer_ext_clock_t start,
                         rtimer_ext_clock_t period,
                         rtimer_ext_callback_t func)
{
  LOG_DBG("Scheduling start: %lld, period: %lld\n", start, period);
  LOG_DBG("HF now: %lld, LF now: %lld\n", rtimer_ext_now_hf(), rtimer_ext_now_lf());

  if (timer > NUM_OF_RTIMER_EXTS) return; 
  rtimer_ext_t* rt = &rtimers[timer];
  if (rt->state == RTIMER_EXT_SCHEDULED) return;
  rt->period = period;
  rt->time = start + period;
  rt->func = func;

  if (timer == RTIMER_EXT_HF_0)
  {
    nrf_timer_cc_write(HF_TIMER, NRF_TIMER_CC_CHANNEL1, (uint32_t) rt->time);
    hf_timer_activate();
    LOG_DBG("Scheduled HF\n");
    rtimer_ext_clock_t now = rtimer_ext_now_hf();
    if (now >= rt->time && rt->state == RTIMER_EXT_SCHEDULED)
    {
      LOG_WARN("Scheduling happened in the past, (now: %lld, time: %lld)\n", now, rt->time);
      hf_timer_deactivate();
      rt->func(rt);
    }
  }
  else if (timer == RTIMER_EXT_LF_0)
  {
    nrf_rtc_cc_set(LF_TIMER, 0, (uint32_t) rt->time);
    lf_timer_activate();
    LOG_DBG("Scheduled LF\n");
    rtimer_ext_clock_t now = rtimer_ext_now_lf();
    if (now >= rt->time && rt->state == RTIMER_EXT_SCHEDULED)
    {
      LOG_WARN("Scheduling happened in the past, (now: %lld, time: %lld)\n", now, rt->time);
      lf_timer_deactivate();
      rt->func(rt);
    }
  }
}

void rtimer_ext_stop(rtimer_ext_id_t timer)
{
  hf_timer_deactivate();
  lf_timer_deactivate();
}

void rtimer_ext_reset(void)
{
  nrf_timer_task_trigger(HF_TIMER, NRF_TIMER_TASK_CLEAR);
  nrf_rtc_task_trigger(LF_TIMER, NRF_RTC_TASK_CLEAR);
  hf_sw_ext = 0;
  lf_sw_ext = 0;
  // LOG_WARN("RESET1, LF: %lld, HF: %lld\n", rtimer_ext_now_lf(), rtimer_ext_now_hf());
  // LOG_WARN("RESET2, LF: %lld, HF: %lld\n", rtimer_ext_now_lf(), rtimer_ext_now_hf());
  // LOG_WARN("RESET3, LF: %lld, HF: %lld\n", rtimer_ext_now_lf(), rtimer_ext_now_hf());
}

rtimer_ext_clock_t rtimer_ext_now_hf(void)
{
  // disable overflow int for now;
  nrf_timer_int_disable(HF_TIMER, NRF_TIMER_INT_COMPARE0_MASK);
  // take times
  //rtimer_ext_clock_t sw_time = hf_sw_ext;
  uint32_t hw_time = rtimer_ext_now_hf_hw();
  // did an interrupt happen in the mean time?
  if (nrf_timer_event_check(HF_TIMER, NRF_TIMER_EVENT_COMPARE0))
  {
    nrf_timer_event_clear(HF_TIMER, NRF_TIMER_EVENT_COMPARE0);
    // if yes, manual increment
    hf_sw_ext++;
    // and new hw time
    hw_time = rtimer_ext_now_hf_hw();
  }
  // compute total time
  rtimer_ext_clock_t res = hf_sw_ext << 32 | hw_time;
  // re-enable interrupt
  nrf_timer_int_enable(HF_TIMER, NRF_TIMER_INT_COMPARE0_MASK);
  return res;
}

rtimer_ext_clock_t rtimer_ext_now_lf(void)
{
  // disable overflow int for now;
  nrf_rtc_int_disable(LF_TIMER, NRF_RTC_INT_OVERFLOW_MASK);
  // take times
  //rtimer_ext_clock_t sw_time = lf_sw_ext;
  uint32_t hw_time = rtimer_ext_now_lf_hw();
  // did an interrupt happen in the mean time?
  if (nrf_rtc_event_pending(LF_TIMER, NRF_RTC_EVENT_OVERFLOW))
  {
    nrf_rtc_event_clear(LF_TIMER, NRF_RTC_EVENT_OVERFLOW);
    // if yes, manual increment
    lf_sw_ext++;
    // and new hw time
    hw_time = rtimer_ext_now_lf_hw();
  }
  // compute total time
  rtimer_ext_clock_t res = lf_sw_ext << 24 | hw_time;
  // re-enable interrupt
  nrf_rtc_int_enable(LF_TIMER, NRF_RTC_INT_OVERFLOW_MASK);
  return res;
}

rtimer_ext_clock_t* rtimer_ext_swext_addr(rtimer_ext_id_t timer)
{
    if (timer == RTIMER_EXT_HF_0)
    {
      return &hf_sw_ext;
    }
    else if (timer == RTIMER_EXT_LF_0)
    {
      return &lf_sw_ext;
    }
    else
    {
      return NULL;
    }
}
